[package]
name = "shared"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
uniffi = "0.29.2"
pitch = "0.2.0"
wasm-bindgen = "0.2.100"
circular-buffer = "1.1.0"
pitch-detector = "0.3.1"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.29.2", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.2", features = ["build"] }
